# 101

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  binary.ppm  build.sh  rebuild.sh
homework/00/: main.cpp
homework/01/code/: CMakeLists.txt  main.cpp
homework/02/code/: main.cpp  rasterizer.cpp  rasterizer.hpp
homework/03/code/: CMakeLists.txt  OBJ_Loader.h  Texture.hpp  main.cpp  rasterizer.cpp
homework/04/code/: CMakeLists.txt  main.cpp
homework/05/code/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
homework/06/code/: BVH.cpp  BVH.hpp  Bounds3.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  Vector.hpp  main.cpp
homework/06/output/: bvh.ppm
homework/07/code/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  global.hpp  main.cpp
homework/07/output/: spp256-microfacet.ppm  spp32-multithreads.ppm  spp32-singlethread.ppm
homework/08/code/: CMakeLists.txt
homework/08/code/CGL/: CMakeLists.txt
homework/08/code/CGL/src/: CMakeLists.txt
homework/08/code/src/: CMakeLists.txt  rope.cpp
